--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.10",
+    "framer-motion": "^10.12.21",
     "next": "13.4.10",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
